fix: Upgrade watson sdk (#166)
* chore: upgrade ibm-watson to 6.0.2

* fix: deprecate returnFields

* fix: replace null with undefined

* test: update DiscoverySearch specs

* fix: add deprecation

* fix: upgrade ibm-watson in example

* fix: upgrade start-server-and-test for axios vulnerability

* refactor: null to undefined

* build: update storybook webpack config

* test: update storybook fixture

* fix: useCallback to prevent infinite rerenders

* test: add useDataApi tests for legacy returnFields

* test: add deprecation spec

* test: use _return for useDataApi spec

--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "fast-xml-parser": "^3.14.0",
     "gh-pages": "^2.1.1",
     "husky": "^3.0.5",
-    "ibm-watson": "5.2.0-alpha-1",
+    "ibm-watson": "^6.0.2",
     "lerna": "^3.16.4",
     "lerna-update-wizard": "^0.16.0",
     "lint-staged": "^9.2.5",
@@ -94,7 +94,7 @@
     "rollup-plugin-typescript2": "^0.23.0",
     "seedrandom": "^3.0.5",
     "source-map-explorer": "2.0.1",
-    "start-server-and-test": "^1.10.0",
+    "start-server-and-test": "^1.11.7",
     "ts-loader": "^6.2.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.8.2",
