--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@rollup/plugin-json": "^4.0.1",
     "@rollup/plugin-node-resolve": "^6.0.0",
     "@rollup/plugin-url": "^4.0.0",
-    "@storybook/addon-actions": "^5.3.14",
-    "@storybook/addon-docs": "^5.3.14",
-    "@storybook/addon-knobs": "^5.3.14",
-    "@storybook/core": "^5.3.14",
-    "@storybook/react": "^5.3.14",
-    "@storybook/source-loader": "^5.3.14",
+    "@storybook/addon-actions": "^5.3.21",
+    "@storybook/addon-docs": "^5.3.21",
+    "@storybook/addon-knobs": "^5.3.21",
+    "@storybook/core": "^5.3.21",
+    "@storybook/react": "^5.3.21",
+    "@storybook/source-loader": "^5.3.21",
     "@svgr/rollup": "^4.3.2",
     "@testing-library/cypress": "^7.0.3",
     "@testing-library/jest-dom": "^4.2.4",
@@ -72,8 +72,8 @@
     "gh-pages": "^2.1.1",
     "husky": "^3.0.5",
     "ibm-watson": "^6.0.2",
-    "lerna": "^3.16.4",
-    "lerna-update-wizard": "^0.16.0",
+    "lerna": "^4.0.0",
+    "lerna-update-wizard": "^0.17.8",
     "lint-staged": "^9.2.5",
     "lorem-ipsum": "^2.0.3",
     "madge": "^4.0.1",
@@ -89,7 +89,7 @@
     "react-docgen-typescript-loader": "^3.1.1",
     "react-dom": "^16.4.1",
     "react-is": "^16.12.0",
-    "react-scripts": "^3.4.0",
+    "react-scripts": "^3.4.4",
     "react-test-renderer": "^16.12.0",
     "regenerator-runtime": "^0.13.3",
     "rollup": "^1.20.2",
@@ -104,6 +104,16 @@
     "vue": "^2.6.11",
     "webpack": "4.41.2",
     "wsrun": "^5.2.0"
+  },
+  "resolutions": {
+    "react-scripts/**/url-parse": "^1.5.1",
+    "@storybook/addon-docs/**/pug": "^3.0.2",
+    "webpack/**/elliptic": "^6.5.4",
+    "**/hosted-git-info": "^3.0.8",
+    "**/lodash": "^4.17.21",
+    "**/react-dev-utils": "^11.0.4",
+    "**/react-syntax-highlighter/**/prismjs": "^1.23.0",
+    "**/ssri": "^8.0.1"
   },
   "lint-staged": {
     "{packages,examples}/**/*.{json,css,scss,md}": [
